[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "Coffee api"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
black = "^23.3.0"
uvicorn = "^0.21.1"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
